--- a/LAKAPSAGAP.BlazorServer/Client/styles/app.scss
+++ b/LAKAPSAGAP.BlazorServer/Client/styles/app.scss
@@ -51,3 +51,34 @@ h1:focus {
 .darker-border-checkbox.form-check-input {
     border-color: #929292;
 }
+
+.search {
+    outline: none;
+    border: 2px solid var(--rz-base-dark);
+    padding: 8px;
+    outline: none;
+    background: var(--rz-base-50);
+    transition: border-color 0.3s, outline 0.3s;
+}
+
+.search:focus {
+    outline: none;
+    border: 2px solid var(--rz-primary);
+}
+
+.search:hover {
+    outline: none;
+    border: 2px solid var(--rz-primary);
+}
+
+.search:active {
+    outline: none;
+    border: 2px solid var(--rz-primary);
+}
+
+.search:disabled {
+    outline: none;
+    border: 2px solid var(--rz-primary);
+    cursor: not-allowed;
+    opacity: 0.6;
+}
