--- a/LAKAPSAGAP.BlazorServer/Pages/Stocks/ReceivedStocksDataGrid.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Stocks/ReceivedStocksDataGrid.razor
@@ -33,9 +33,9 @@
 					<Columns>
 						<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.Id)" Title="Batch ID"
 											  TextAlign="TextAlign.Left" Width="60px" />
-						<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.ItemName)" Title="Receive Type"
+						<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.ItemId)" Title="Receive Type"
 											  TextAlign="TextAlign.Left" Width="80px" />
-						<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.Category)" Title="Date Received"
+						<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.CategoryId)" Title="Date Received"
 											  TextAlign="TextAlign.Left" Width="90px" />
 						<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.Quantity)" Title="Supplier"
 											  TextAlign="TextAlign.Left" Width="90px" />
