--- a/LAKAPSAGAP.BlazorServer/Pages/Warehouse/WarehouseCreateEdit.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Warehouse/WarehouseCreateEdit.razor
@@ -2,13 +2,13 @@
 	<RadzenText class="fw-bold text-danger" TextStyle="TextStyle.DisplayH5" Text="Warehouse Management" />
 	<form style="width: 100%;" class="d-grid gap-2">
 		<div class="row w-100">
-			<div class="col w-full">
+			@* <div class="col w-full">
 				<div class="d-flex w-100 flex-column align-items-start justify-content-start gap-1">
 					<span class="fw-bold text-uppercase">Select Warehouse</span>
 					<RadzenDropDown Style="width: 100%;" Placeholder="Select option" AllowClear="true"
 									Data="warehouses" TextProperty="Name" ValueProperty="Id" @bind-Value="_selectedWhse" Change="() => CreateOrEdit(_selectedWhse)" />
 				</div>
-			</div>
+			</div> *@
 			<div class="col w-full">
 				<div class="d-flex w-100 flex-column align-items-start justify-content-start gap-1">
 					<span class="fw-bold text-uppercase">Warehouse Name</span>
