--- a/LAKAPSAGAP.BlazorServer/Shared/MainLayout.razor
+++ b/LAKAPSAGAP.BlazorServer/Shared/MainLayout.razor
@@ -22,15 +22,18 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div> *@
-
-<RadzenLayout>
-    <RadzenHeader class="shadow-sm" Style="box-shadow: var(--rz-shadow-0); background-color: var(--rz-white);">
-        <NavMenu />
-    </RadzenHeader>
-    <RadzenBody Style="background-color: var(--rz-base-200); padding: 0px">
-        @Body
-    </RadzenBody>
-@*     <RadzenFooter class="shadow">
+<CascadingAuthenticationState>
+    <RadzenLayout>
+        <RadzenHeader class="shadow-sm" Style="box-shadow: var(--rz-shadow-0); background-color: var(--rz-white);">
+            <NavMenu />
+        </RadzenHeader>
+        <RadzenBody Style="background-color: var(--rz-base-200); padding: 0px">
+            @Body
+        </RadzenBody>
+        @*     <RadzenFooter class="shadow">
         This is the Footer
-    </RadzenFooter> *@
-</RadzenLayout>
+        </RadzenFooter> *@
+    </RadzenLayout>
+
+</CascadingAuthenticationState>
+
