--- a/LAKAPSAGAP.BlazorServer/Pages/Warehouse/Warehouse.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Warehouse/Warehouse.razor
@@ -4,14 +4,21 @@
 		<span class="fw-bold text-center fs-5">Warehouse Status</span>
 	</div>
 
-	<RadzenDropDown TValue="LAKAPSAGAP.Models.Models.Warehouse"
-					Style="width: 100%; margin-top: 0.25rem;"
-					TextProperty="@nameof(LAKAPSAGAP.Models.Models.Warehouse.Name)"
-					ValueProperty="@nameof(LAKAPSAGAP.Models.Models.Warehouse.Id)"
-					Name="WarehouseList"
-					Data="@warehouses"
-					AllowClear="false"
-					Change="(args) => NavigateToWhse(args?.ToString())" />
+	<div class="d-flex w-100 gap-2 justify-content-evenly align-items-center" style="margin-top: 0.75rem;">
+		<RadzenDropDown TValue="LAKAPSAGAP.Models.Models.Warehouse"
+						Style="width: 100%; height: 40px !important; flex-grow: 1;"
+						TextProperty="@nameof(LAKAPSAGAP.Models.Models.Warehouse.Name)"
+						ValueProperty="@nameof(LAKAPSAGAP.Models.Models.Warehouse.Id)"
+						Name="WarehouseList"
+						Data="@warehouses"
+						Placeholder="@model.Name"
+						AllowClear="false"
+						Change="(args) => NavigateToWhse(args?.ToString())" />
+
+		<RadzenButton ButtonStyle="ButtonStyle.Success" Variant="Variant.Filled" Shade="Shade.Light" Icon="add"
+					  Style="margin: 0px; flex-shrink: 0; border-radius: var(--rz-border-radius-1);" 
+					  Click="() => ShowWarehouseManagementDialog(new WarehouseViewModel())" />
+	</div>
 
 
 	<div class="d-flex flex-column gap-2 justify-content-start align-items-start" style="margin-top: 0.75rem;">
@@ -20,12 +27,11 @@
 	</div>
 
 	<RadzenButton ButtonStyle="ButtonStyle.Success" Variant="Variant.Outlined" Icon="settings" Text="Warehouse Settings"
-				  Style="width: 100%; border-radius: var(--rz-border-radius-6);" Click="ShowWarehouseManagementDialog" />
+				  Style="width: 100%; border-radius: var(--rz-border-radius-6);" Click="() => ShowWarehouseManagementDialog(model)" />
 
 	<hr class="w-100 px-3 my-1" />
 
-	<div id="floors-list" class="d-flex flex-column gap-2 justify-content-start align-items-start w-100 overflow-scroll"
-		 style="height: calc(100% - 20%); overflow-y: auto;">
+	<div id="floors-list" class="d-flex flex-column gap-2 justify-content-start align-items-start w-100 overflow-scroll flex-grow-0">
 		@foreach (var floor in model.FloorList)
 		{
 			<RadzenPanel AllowCollapse="true" class="rz-mx-auto"
@@ -56,13 +62,14 @@
 
 @code
 {
-	async Task ShowWarehouseManagementDialog()
+	async Task ShowWarehouseManagementDialog(WarehouseViewModel? value)
 	{
-		var result = await _dialogService.OpenAsync("Receive Stock", ds => @<WarehouseCreateEdit dialogService="ds" whseModel="model" /> ,
+		var result = await _dialogService.OpenAsync("Receive Stock", ds => @<WarehouseCreateEdit dialogService="ds" whseModel="value" /> ,
 		new DialogOptions()
 		{
 			CssClass = "rz-w-fit-content",
 			ShowTitle = false,
 		});
 	}
+
 }
