--- a/LAKAPSAGAP.BlazorServer/Client/styles/app.scss
+++ b/LAKAPSAGAP.BlazorServer/Client/styles/app.scss
@@ -1,4 +1,7 @@
 @import "bootstrap/scss/bootstrap";
+@import 'toastify-js/src/toastify.css';
+
+
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
