--- a/LAKAPSAGAP.BlazorServer/Shared/NavMenu.razor
+++ b/LAKAPSAGAP.BlazorServer/Shared/NavMenu.razor
@@ -61,7 +61,7 @@
                  JustifyContent="JustifyContent.Start" Wrap="FlexWrap.NoWrap" Gap="0.25rem">
         <div style="width: 100%; border: none; border-radius: var(--rz-border-radius-6);"
              class="d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center link"
-             @onclick="@(() =>_navManager.NavigateTo("Warehouse/Stocks", true))">
+             @onclick="@(() =>_navManager.NavigateTo("Warehouse/", true))">
             <i class='bx bxs-package' style="font-size: 0.8rem"></i>
             <span class="fs-6 fw-bold text-center">Stocks</span>
         </div>
