fix: update uri of users page

--- a/LAKAPSAGAP.BlazorServer/Pages/UserManagement/Users.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/UserManagement/Users.razor
@@ -1,7 +1,7 @@
-﻿@layout MainLayout
+﻿@using LAKAPSAGAP.Models.ViewModel
 
-@page "/Users"
-@using LAKAPSAGAP.Models.ViewModel
+@page "/MasterData/Users"
+@layout MainLayout
 
 <PageTitle>Users</PageTitle>
 
