[BlazorServer](update) Change Navigation to Warehouse Stocks
- Added Service that randomly picks a warehouse
- default warehouse loading

--- a/LAKAPSAGAP.BlazorServer/Pages/Stocks/Stocks.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Stocks/Stocks.razor
@@ -1,6 +1,6 @@
 ﻿@using LAKAPSAGAP.BlazorServer.Pages.Warehouse
 
-@page "/Warehouse/{id}"
+@page "/Warehouse/{id}/Stocks"
 @layout MainLayout
 <PageTitle>Stocks</PageTitle>
 
