feat: add uom initial repository, ui, logics

--- a/LAKAPSAGAP.BlazorServer/Pages/MasterData/UoM/UnitOfMeasurement.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/MasterData/UoM/UnitOfMeasurement.razor
@@ -1,7 +1,13 @@
-﻿@page "/MasterData/UoM"
+﻿@using LAKAPSAGAP.BlazorServer.Controls.MasterData.UoM
+
+@page "/MasterData/UoM"
 @layout MainLayout
 
-<h3>UnitOfMeasurement</h3>
+<PageTitle>UoM</PageTitle>
+
+<MacroContainer>
+    <UoMControl />
+</MacroContainer>
 
 @code {
 
