--- a/LAKAPSAGAP.BlazorServer/Pages/Stocks/ReceivedStocksDataGrid.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Stocks/ReceivedStocksDataGrid.razor
@@ -20,9 +20,9 @@
 									  TextAlign="TextAlign.Left" Width="90px" />
 				<RadzenDataGridColumn Title="Actions" TextAlign="TextAlign.Left" Width="60px">
 					<Template Context="data">
-						<RadzenButton ButtonStyle="ButtonStyle.Primary" Icon="visibility" Style="border-radius: var(--rz-border-radius-2)" />
-						<RadzenButton ButtonStyle="ButtonStyle.Primary" Icon="edit" Style="border-radius: var(--rz-border-radius-2)" />
-						<RadzenButton ButtonStyle="ButtonStyle.Danger" Text="Return" Style="border-radius: var(--rz-border-radius-2)" />
+						<RadzenButton Size=ButtonSize.Small ButtonStyle="ButtonStyle.Primary" Icon="visibility" Style="border-radius: var(--rz-border-radius-2)" />
+						<RadzenButton Size=ButtonSize.Small ButtonStyle="ButtonStyle.Primary" Icon="edit" Style="border-radius: var(--rz-border-radius-2)" />
+						<RadzenButton Size=ButtonSize.Small ButtonStyle="ButtonStyle.Danger" Text="Return" Style="border-radius: var(--rz-border-radius-2)" />
 					</Template>
 				</RadzenDataGridColumn>
 			</Columns>
