--- a/LAKAPSAGAP.BlazorServer/Shared/NavMenu.razor
+++ b/LAKAPSAGAP.BlazorServer/Shared/NavMenu.razor
@@ -68,7 +68,7 @@
 </RadzenStack>
 
 <Popup @ref=masterDataPopup Lazy class="popup">
-    <RadzenStack Style="width: 8rem;" Wrap="FlexWrap.NoWrap" Gap="0.25rem">
+    <RadzenStack Wrap="FlexWrap.NoWrap" Gap="0.25rem">
         <div style="width: 100%; border: none; border-radius: var(--rz-border-radius-6);"
              class="d-flex flex-row gap-2 px-4 py-2 align-items-center link"
              @onclick="@(() =>_navManager.NavigateTo("MasterData/Users", true))">
@@ -79,7 +79,7 @@
              class="d-flex flex-row gap-2 px-4 py-2 align-items-center link"
              @onclick="@(() =>_navManager.NavigateTo("MasterData/UoM", true))">
             <i class='bx bxs-shopping-bag-alt' style="font-size: 0.8rem"></i>
-            <span class="fs-6 fw-bold text-center">Kits</span>
+            <span class="fs-6 fw-bold text-center">Unit Of Measurement</span>
         </div>
     </RadzenStack>
 </Popup>
