--- a/LAKAPSAGAP.BlazorServer/Pages/Stocks/ReceiveStockForm.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Stocks/ReceiveStockForm.razor
@@ -124,11 +124,6 @@
 												  TextAlign="TextAlign.Left" Width="90px" />
 							<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.UoMId)" Title="UoM"
 												  TextAlign="TextAlign.Left" Width="90px" />
-							<RadzenDataGridColumn Title="Location" TextAlign="TextAlign.Left" Width="90px">
-								<Template Context="data">
-									@data.FloorId - @data.RackId
-								</Template>
-							</RadzenDataGridColumn>
 							<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.ExpiryDate)" Title="Expiration Date" FormatString="{0:MMM dd, yyyy}"
 												  TextAlign="TextAlign.Left" Width="90px" />
 							<RadzenDataGridColumn Title="Actions" TextAlign="TextAlign.Left" Width="60px">
@@ -175,11 +170,6 @@
 											  TextAlign="TextAlign.Left" Width="90px" />
 						<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.UoMId)" Title="UoM"
 											  TextAlign="TextAlign.Left" Width="90px" />
-						<RadzenDataGridColumn Title="Location" TextAlign="TextAlign.Left" Width="90px">
-							<Template Context="data">
-								@data.FloorId - @data.RackId
-							</Template>
-						</RadzenDataGridColumn>
 						<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.ExpiryDate)" Title="Expiration Date" FormatString="{0:MMM dd, yyyy}"
 											  TextAlign="TextAlign.Left" Width="90px" />
 						<RadzenDataGridColumn Title="Actions" TextAlign="TextAlign.Left" Width="60px">
@@ -195,7 +185,7 @@
 				</RadzenDataGrid>
 				<div class="w-100 d-flex align-items-center justify-content-end mt-3 gap-2">
 					<RadzenButton Style="width: fit-content; " Text="Back" Click="@(() => changeTab("form"))" ButtonStyle="ButtonStyle.Base" />
-					<RadzenButton Style="width: fit-content; " Text="Confirm" Click="ConfirmReceiving" ButtonStyle="ButtonStyle.Success" Shade="Shade.Light" />
+					<RadzenButton Style="width: fit-content; " Text="Confirm" Click="@(async () => await ConfirmReceiving())" ButtonStyle="ButtonStyle.Success" Shade="Shade.Light" />
 				</div>
 			</div>
 		</div>
