--- a/LAKAPSAGAP.BlazorServer/Shared/App.razor
+++ b/LAKAPSAGAP.BlazorServer/Shared/App.razor
@@ -1,4 +1,11 @@
-﻿<!DOCTYPE html>
+﻿@using Vite.AspNetCore
+
+@inject IWebHostEnvironment env
+@inject IViteManifest manifest
+@inject IViteDevServerStatus vite
+
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -12,13 +19,46 @@
 	<link rel="icon" type="image/png" href="favicon.png" />
 	<HeadOutlet @rendermode=RenderModeForPage />
 	<RadzenTheme Theme="material" @rendermode="InteractiveServer" />
+	@if (env.IsDevelopment() && vite.IsMiddlewareEnable)
+	{
+		<script type="module" src="@@vite/client"></script>
+		<script type="module" src="scripts/app.js" defer></script>
+
+		/** Note that this .scss is correct as it's purely acting as a 'key'
+		to the real css file being held in the Vite server memory. **/
+		<link rel="stylesheet" href="styles/app.scss" />
+	}
+	else
+	{
+		IViteChunk? js = manifest["scripts/app.js"];
+		if (js is not null)
+		{
+			<script type="module" src="@js.File" defer></script>
+
+			if (js.Imports is not null)
+			{
+				foreach (string import in js.Imports)
+				{
+					if (manifest.ContainsKey(import) is false) continue;
+
+					<script type="module" src="@manifest[import]!.File" defer></script>
+				}
+			}
+		}
+
+		IViteChunk? css = manifest["styles/app.scss"];
+		if (css is not null)
+		{
+			<link rel="stylesheet" href="@css.File" />
+		}
+	}
 </head>
 
 <body>
 	<Routes @rendermode=RenderModeForPage />
 	<script src="_framework/blazor.web.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
-	<script src="/scripts/index.bundle.js"></script>
 </body>
 
 </html>
