--- a/LAKAPSAGAP.BlazorServer/Controls/MasterData/UoM/ViewUpdateUoMDialog.razor
+++ b/LAKAPSAGAP.BlazorServer/Controls/MasterData/UoM/ViewUpdateUoMDialog.razor
@@ -1,5 +1,9 @@
 ﻿<RadzenTemplateForm Data="@_uom" TItem="UoMViewModel" Submit="@Submit">
 	<RadzenStack Gap="5px">
+		<RadzenStack Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.End" AlignItems="AlignItems.Center">
+			<RadzenLabel Text="Active" Component="switch" />
+			<RadzenSwitch @bind-Value=@_isActive Name="switch" Disabled=@(!_isEditing) />
+		</RadzenStack>
 		<RadzenFormField Text="Name">
 			<ChildContent>
 				<RadzenTextBox @bind-Value=@_uom.Name Name="uom-name" Disabled=@(!_isEditing) />
