--- a/LAKAPSAGAP.BlazorServer/Pages/Kits/Kits.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Kits/Kits.razor
@@ -2,7 +2,7 @@
 
 @page "/Warehouse/{id}/Kits"
 @layout MainLayout
-<PageTitle>Stocks</PageTitle>
+<PageTitle>Kits</PageTitle>
 
 <MacroBody>
 	<MacroContainer>
@@ -16,7 +16,7 @@
 			@* Side Content *@
 
 			<div class="card p-3 d-flex flex-column align-items-start just-items-start" style="width: 20%; height: 100%;">
-				@* <Warehouse Id="@(id)"/> *@
+				<Warehouse Id="@(id)"/>
 			</div>
 
 			@* Center Contents *@
@@ -42,19 +42,16 @@
 
 				@* Tabs *@
 
-				@* <RadzenTabs Style="border: 1px solid var(--rz-base-300); border-radius: var(--rz-border-radius-1); width: 100%; height: 100%;" TabPosition="TabPosition.Top" RenderMode="TabRenderMode.Client">
+				<RadzenTabs Style="border: 1px solid var(--rz-base-300); border-radius: var(--rz-border-radius-1); width: 100%; height: 100%;" TabPosition="TabPosition.Top" RenderMode="TabRenderMode.Client">
 					<Tabs>
-						<RadzenTabsItem Text="Stocks">
-							<StocksDataGrid />
+						<RadzenTabsItem Text="Kits Availability">
+							<KitsAvailability />
 						</RadzenTabsItem>
-						<RadzenTabsItem Text="Received Stocks">
-							<ReceivedStocksDataGrid />
-						</RadzenTabsItem>
-						<RadzenTabsItem Text="Released Stocks">
-							<ReleasedStocksDataGrid />
+						<RadzenTabsItem Text="Kits Management">
+							<KitsManagement />
 						</RadzenTabsItem>
 					</Tabs>
-				</RadzenTabs> *@
+				</RadzenTabs>
 
 			</div>
 		</div>
@@ -66,7 +63,7 @@
 {
 	async Task ShowReceiveStockDialog()
 		{
-			var result = await _dialogService.OpenAsync("Receive Stock", ds => @<ReceiveStockForm dialogService="ds" /> ,
+			var result = await _dialogService.OpenAsync("Receive Stock", ds => @<KitsCreateUpdate dialogService="ds" /> ,
 			new DialogOptions()
 			{
 				CssClass = "rz-w-fit-content",
