--- a/LAKAPSAGAP.BlazorServer/Shared/NavMenu.razor
+++ b/LAKAPSAGAP.BlazorServer/Shared/NavMenu.razor
@@ -87,6 +87,12 @@
             <i class='bx bxs-category' style="font-size: 0.8rem"></i>
             <span class="fs-6 fw-bold text-center">Categories</span>
         </div>
+        <div style="width: 100%; border: none; border-radius: var(--rz-border-radius-6);"
+             class="d-flex flex-row gap-2 px-4 py-2 align-items-center link"
+             @onclick="@(() =>_navManager.NavigateTo("MasterData/Racks", true))">
+            <i class='bx bxs-checkbox' style="font-size: 0.8rem"></i>
+            <span class="fs-6 fw-bold text-center">Racks</span>
+        </div>
     </RadzenStack>
 </Popup>
 
